--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ subprojects { project ->
     dependencies {
       classpath 'com.android.tools.build:gradle:2.2.2'
       classpath 'gradle.plugin.com.kageiit:lintrules:1.1.2'
+      classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
+      classpath "org.jfrog.buildinfo:build-info-extractor-gradle:3.1.1"
     }
   }
 }
