--- a/butterknife-gradle-plugin/gradle.properties
+++ b/butterknife-gradle-plugin/gradle.properties
@@ -1,3 +1,29 @@
 POM_NAME=Butterknife Gradle Plugin
 POM_ARTIFACT_ID=butterknife-gradle-plugin
 POM_PACKAGING=jar
+
+
+
+# 库的包名
+PROJ_GROUP=butterknife
+# 库的ID
+PROJ_ARTIFACTID=butterknife
+# 库的版本
+PROJ_VERSION=1.0.0
+### 最后 gradle引用的形式就是 $PROJ_GROUP:$PROJ_ARTIFACTID:$PROJ_VERSION
+
+# 库名
+PROJ_NAME=butterknife
+# 库的项目主页
+PROJ_WEBSITEURL=https://github.com/liungkejin/XImageView
+# 问题跟踪地址
+PROJ_ISSUETRACKERURL=https://github.com/liungkejin/XImageView/issues
+# VCS 地址
+PROJ_VCSURL=https://github.com/liungkejin/XImageView.git
+# 库的简单描述
+PROJ_DESCRIPTION=Android View for show large image
+
+# 开发者的信息, 可以随意
+DEVELOPER_ID=Kejin
+DEVELOPER_NAME=Liang Ke Jin
+DEVELOPER_EMAIL=liungkejin
