--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,52 @@
+buildscript {
+  ext.versions = [
+      'minSdk': 9,
+      'compileSdk': 25,
+      'buildTools': '25.0.2',
+
+      'supportLibrary': '25.1.0',
+      'androidPlugin': '2.2.0',
+      'androidTools': '25.2.0',
+
+      'release': '8.4.0',
+  ]
+
+  ext.deps = [
+      android: [
+          'runtime': 'com.google.android:android:4.1.1.4',
+          'gradlePlugin': "com.android.tools.build:gradle:${versions.androidPlugin}",
+      ],
+      'support': [
+          'compat': "com.android.support:support-compat:${versions.supportLibrary}",
+          'annotations': "com.android.support:support-annotations:${versions.supportLibrary}",
+          'test': [
+              'runner': 'com.android.support.test:runner:0.5',
+          ],
+      ],
+      'lint': [
+          'core': "com.android.tools.lint:lint:${versions.androidTools}",
+          'api': "com.android.tools.lint:lint-api:${versions.androidTools}",
+          'checks': "com.android.tools.lint:lint-checks:${versions.androidTools}",
+          'tests': "com.android.tools.lint:lint-tests:${versions.androidTools}",
+      ],
+      javapoet: 'com.squareup:javapoet:1.8.0',
+      javaparser: 'com.github.javaparser:javaparser-core:2.4.0',
+      junit: 'junit:junit:4.12',
+      truth: 'com.google.truth:truth:0.28',
+      robolectric: 'org.robolectric:robolectric:3.1.2',
+      openglApi: 'org.khronos:opengl-api:gl1.1-android-2.1_r1',
+      compiletesting: 'com.google.testing.compile:compile-testing:0.9',
+      'auto': [
+          'service': 'com.google.auto.service:auto-service:1.0-rc2',
+          'common': 'com.google.auto:auto-common:0.6',
+      ],
+      'release': [
+          'runtime': "com.jakewharton:butterknife:${versions.release}",
+          'compiler': "com.jakewharton:butterknife-compiler:${versions.release}"
+      ],
+  ]
+}
+
 subprojects { project ->
   group = GROUP
   version = VERSION_NAME
@@ -37,52 +86,8 @@ subprojects { project ->
       }
     }
     dependencies {
-      classpath 'com.android.tools.build:gradle:2.2.2'
+      classpath deps.android.gradlePlugin
       classpath 'gradle.plugin.com.kageiit:lintrules:1.1.2'
     }
   }
 }
-
-ext {
-  minSdkVersion = 9
-  targetSdkVersion = 25
-  compileSdkVersion = 25
-  buildToolsVersion = '25.0.2'
-  sourceCompatibilityVersion = JavaVersion.VERSION_1_7
-  targetCompatibilityVersion = JavaVersion.VERSION_1_7
-}
-
-def androidToolsVersion = '25.2.0'
-def supportLibraryVersion = '25.1.0'
-def butterknifeLatestReleaseVersion = '8.4.0'
-
-ext.deps = [
-    // Android
-    android: 'com.google.android:android:4.1.1.4',
-    supportCompat: "com.android.support:support-compat:$supportLibraryVersion",
-    supportAnnotations: "com.android.support:support-annotations:$supportLibraryVersion",
-    supportTestRunner: 'com.android.support.test:runner:0.5',
-    androidGradle: 'com.android.tools.build:gradle:2.2.0',
-    lint: "com.android.tools.lint:lint:$androidToolsVersion",
-    lintApi: "com.android.tools.lint:lint-api:$androidToolsVersion",
-    lintChecks: "com.android.tools.lint:lint-checks:$androidToolsVersion",
-    lintTests: "com.android.tools.lint:lint-tests:$androidToolsVersion",
-
-    // Square
-    javapoet: 'com.squareup:javapoet:1.8.0',
-
-    // Third Party
-    javaparser: 'com.github.javaparser:javaparser-core:2.4.0',
-
-    // Test dependencies
-    junit: 'junit:junit:4.12',
-    truth: 'com.google.truth:truth:0.28',
-    robolectric: 'org.robolectric:robolectric:3.1.2',
-    openglApi: 'org.khronos:opengl-api:gl1.1-android-2.1_r1',
-    compiletesting: 'com.google.testing.compile:compile-testing:0.9',
-    autoservice: 'com.google.auto.service:auto-service:1.0-rc2',
-    autocommon: 'com.google.auto:auto-common:0.6',
-
-    butterknife: "com.jakewharton:butterknife:$butterknifeLatestReleaseVersion",
-    butterknifeCompiler: "com.jakewharton:butterknife-compiler:$butterknifeLatestReleaseVersion"
-]
