--- a/sample/app/build.gradle
+++ b/sample/app/build.gradle
@@ -1,18 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion rootProject.ext.compileSdkVersion
-  buildToolsVersion rootProject.ext.buildToolsVersion
+  compileSdkVersion versions.compileSdk
+  buildToolsVersion versions.buildTools
 
   compileOptions {
-    sourceCompatibility = rootProject.ext.sourceCompatibilityVersion
-    targetCompatibility = rootProject.ext.targetCompatibilityVersion
+    sourceCompatibility = JavaVersion.VERSION_1_7
+    targetCompatibility = JavaVersion.VERSION_1_7
   }
 
   defaultConfig {
     applicationId 'com.example.butterknife'
-    minSdkVersion rootProject.ext.minSdkVersion
-    targetSdkVersion rootProject.ext.targetSdkVersion
+    minSdkVersion versions.minSdk
+    targetSdkVersion versions.compileSdk
     versionCode 1
     versionName '1.0.0'
   }
@@ -30,8 +30,8 @@ android {
 }
 
 dependencies {
-  compile deps.butterknife
-  annotationProcessor deps.butterknifeCompiler
+  compile deps.release.runtime
+  annotationProcessor deps.release.compiler
 
   compile project(':sample:library')
 
