--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,18 @@ language: android
 
 android:
   components:
+    # Update tools and then platform-tools explicitly so lint gets an updated database. Can be removed once 3.0 is out.
     - tools
     - platform-tools
-    - build-tools-25.0.2
-    - android-25
-    - extra-android-m2repository
     - sys-img-armeabi-v7a-android-18
 
 jdk:
   - oraclejdk8
 
 before_script:
+  # Install SDK license so Android Gradle plugin can install deps.
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
   # Create and start an emulator for instrumentation tests.
   - echo no | android create avd --force -n test -t android-18 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
@@ -38,6 +39,5 @@ sudo: false
 
 cache:
   directories:
-    - $HOME/.m2
     - $HOME/.gradle
 
