Upgrade Gradle to 4.0
Ran `./gradlew wrapper --gradle-version=4.0 --distribution-type=all`.
Lint complained about the integration test's `strings.xml`.

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Jun 02 10:37:29 EDT 2017
+#Thu Jun 22 16:14:40 PDT 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.0-rc-1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.0-all.zip
