--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
       'buildTools': '25.0.2',
 
       'supportLibrary': '25.3.0',
-      'androidPlugin': '2.3.2',
+      'androidPlugin': '2.3.3',
       'androidTools': '25.3.0',
       'kotlin': '1.1.2-4',
 
@@ -30,16 +30,15 @@ buildscript {
           'checks': "com.android.tools.lint:lint-checks:${versions.androidTools}",
           'tests': "com.android.tools.lint:lint-tests:${versions.androidTools}",
       ],
-      javapoet: 'com.squareup:javapoet:1.8.0',
-      javaparser: 'com.github.javaparser:javaparser-core:2.4.0',
+      javapoet: 'com.squareup:javapoet:1.9.0',
+      javaparser: 'com.github.javaparser:javaparser-core:3.2.8',
       junit: 'junit:junit:4.12',
-      truth: 'com.google.truth:truth:0.33',
-      robolectric: 'org.robolectric:robolectric:3.1.2',
-      openglApi: 'org.khronos:opengl-api:gl1.1-android-2.1_r1',
+      truth: 'com.google.truth:truth:0.34',
+      robolectric: 'org.robolectric:robolectric:3.4-rc2',
       compiletesting: 'com.google.testing.compile:compile-testing:0.11',
       'auto': [
           'service': 'com.google.auto.service:auto-service:1.0-rc3',
-          'common': 'com.google.auto:auto-common:0.6',
+          'common': 'com.google.auto:auto-common:0.8',
       ],
       'release': [
           'runtime': "com.jakewharton:butterknife:${versions.release}",
