--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.jakewharton
-VERSION_NAME=8.6.1-SNAPSHOT
+VERSION_NAME=8.7.0
 
 POM_DESCRIPTION=Field and method binding for Android views.
 
