--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,9 @@ buildscript {
       'supportLibrary': '25.3.0',
       'androidPlugin': '2.3.3',
       'androidTools': '25.3.0',
-      'kotlin': '1.1.2-4',
+      'kotlin': '1.1.3-2',
 
-      'release': '8.6.0',
+      'release': '8.7.0',
   ]
 
   ext.deps = [
@@ -23,7 +23,7 @@ buildscript {
           'compat': "com.android.support:support-compat:${versions.supportLibrary}",
           'annotations': "com.android.support:support-annotations:${versions.supportLibrary}",
           'test': [
-              'runner': 'com.android.support.test:runner:0.5',
+              'runner': 'com.android.support.test:runner:1.0.0',
           ],
       ],
       'lint': [
@@ -33,10 +33,10 @@ buildscript {
           'tests': "com.android.tools.lint:lint-tests:${versions.androidTools}",
       ],
       javapoet: 'com.squareup:javapoet:1.9.0',
-      javaparser: 'com.github.javaparser:javaparser-core:3.2.8',
+      javaparser: 'com.github.javaparser:javaparser-core:3.3.0',
       junit: 'junit:junit:4.12',
       truth: 'com.google.truth:truth:0.34',
-      robolectric: 'org.robolectric:robolectric:3.4-rc2',
+      robolectric: 'org.robolectric:robolectric:3.4',
       compiletesting: 'com.google.testing.compile:compile-testing:0.11',
       'auto': [
           'service': 'com.google.auto.service:auto-service:1.0-rc3',
@@ -63,7 +63,7 @@ buildscript {
     classpath deps.android.gradlePlugin
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.15.0'
-    classpath 'gradle.plugin.com.kageiit:lintrules:1.1.2'
+    classpath 'gradle.plugin.com.kageiit:lintrules:1.1.3'
   }
 }
 
