--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
       'buildTools': '26.0.0',
 
       'supportLibrary': '26.0.0',
-      'androidPlugin': '2.3.3',
+      'androidPlugin': '3.0.0-alpha8',
       'androidTools': '25.3.0',
       'kotlin': '1.1.3-2',
 
