--- a/butterknife/build.gradle
+++ b/butterknife/build.gradle
@@ -41,6 +41,7 @@ dependencies {
   testImplementation deps.junit
   testImplementation deps.truth
   testImplementation deps.compiletesting
+  testImplementation deps.auto.common
   testImplementation files(getRuntimeJar())
   testImplementation files(org.gradle.internal.jvm.Jvm.current().getToolsJar())
   testImplementation project(':butterknife-compiler')
