--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
       'buildTools': '26.0.1',
 
       'supportLibrary': '26.0.1',
-      'androidPlugin': '3.0.0-alpha9',
+      'androidPlugin': '3.0.0-beta2',
       'androidTools': '26.0.0-alpha9',
       'kotlin': '1.1.3-2',
 
