--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 
       'supportLibrary': '26.0.1',
       'androidPlugin': '3.0.0-beta2',
-      'androidTools': '26.0.0-alpha9',
+      'androidTools': '26.0.0-beta2',
       'kotlin': '1.1.3-2',
 
       'release': '8.7.0',
