--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
       'buildTools': '26.0.1',
 
       'supportLibrary': '26.0.2',
-      'androidPlugin': '3.0.0-beta5',
-      'androidTools': '26.0.0-beta5',
+      'androidPlugin': '3.0.0-beta6',
+      'androidTools': '26.0.0-beta6',
       'kotlin': '1.1.4-3',
 
       'release': '8.8.1',
@@ -53,17 +53,14 @@ buildscript {
 
   repositories {
     mavenCentral()
+    jcenter()
     google()
-    maven {
-      url "https://plugins.gradle.org/m2/"
-    }
   }
 
   dependencies {
     classpath deps.android.gradlePlugin
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.15.0'
-    classpath 'gradle.plugin.com.kageiit:lintrules:1.1.3'
   }
 }
 
@@ -73,10 +70,8 @@ subprojects { project ->
 
   repositories {
     mavenCentral()
+    jcenter()
     google()
-    maven {
-      url "https://plugins.gradle.org/m2/"
-    }
   }
 
   if (!project.name.equals('butterknife-gradle-plugin')) {
