--- a/butterknife-compiler/build.gradle
+++ b/butterknife-compiler/build.gradle
@@ -7,6 +7,7 @@ targetCompatibility = JavaVersion.VERSION_1_7
 dependencies {
   implementation project(':butterknife-annotations')
   implementation deps.auto.common
+  implementation deps.guava
   api deps.javapoet
   compileOnly deps.auto.service
   compileOnly files(org.gradle.internal.jvm.Jvm.current().getToolsJar())
