--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
       'compileSdk': 26,
 
       'supportLibrary': '27.0.0',
-      'androidPlugin': '3.0.0',
+      'androidPlugin': '3.1.0-alpha01',
       'androidTools': '26.0.0',
       'kotlin': '1.1.51',
 
