Fix Kotlin version warning due to AGP's lint pulling in old reflect

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ buildscript {
       ],
       'kotlin': [
           'stdLibJre8': "org.jetbrains.kotlin:kotlin-stdlib-jre8:${versions.kotlin}",
+          'reflect': "org.jetbrains.kotlin:kotlin-reflect:${versions.kotlin}"
       ]
   ]
 
