--- a/butterknife/build.gradle
+++ b/butterknife/build.gradle
@@ -45,18 +45,12 @@ dependencies {
   testCompileOnly deps.javapoet
 }
 
-def getRuntimeJar() {
-  try {
-    final File javaBase = new File(System.getProperty("java.home")).getCanonicalFile();
-    File runtimeJar = new File(javaBase, "lib/rt.jar");
-    if (runtimeJar.exists()) {
-      return runtimeJar;
-    }
-    runtimeJar = new File(javaBase, "jre/lib/rt.jar");
-    return runtimeJar.exists() ? runtimeJar : null;
-  } catch (IOException e) {
-    throw new RuntimeException(e);
-  }
+static def getRuntimeJar() {
+  final javaBase = new File(System.properties.'java.home').canonicalFile
+  [ 'lib/rt.jar', 'jre/lib/rt.jar' ]
+      .collect { new File(javaBase, it) }
+      .grep { it.exists() }
+      .find()
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
