Hide unfixable bootClasspath 1.7 warning

--- a/build.gradle
+++ b/build.gradle
@@ -95,4 +95,12 @@ subprojects { project ->
       }
     }
   }
+
+  project.tasks.withType(JavaCompile) {
+    it.options.with {
+      setCompilerArgs(getCompilerArgs() + [
+        '-Xlint:-options'
+      ])
+    }
+  }
 }
