Parse manifest to determine package name.
We don't want to use the applicationId to find the location of the
R.java file because the R.java file's location is based on the package
name not the applicationId.

The applicationId can change based on the variant, but the R.java file's
location will not change.

Added some tests to make sure this works based on the FixturesTest in
SQLDelight.

Fixes #1177

--- a/butterknife-gradle-plugin/build.gradle
+++ b/butterknife-gradle-plugin/build.gradle
@@ -1,8 +1,17 @@
-apply plugin: 'java-library'
+apply plugin: 'java-gradle-plugin'
 apply plugin: 'kotlin'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
+
+configurations {
+  fixtureClasspath
+}
+// Append any extra dependencies to the test fixtures via a custom configuration classpath. This
+// allows us to apply additional plugins in a fixture while still leveraging dependency resolution
+// and de-duplication semantics.
+def metadata = tasks.getByName('pluginUnderTestMetadata')
+metadata.setPluginClasspath(metadata.getPluginClasspath() + configurations.fixtureClasspath)
 
 dependencies {
   compileOnly gradleApi()
