--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,10 @@ buildscript {
       'compileSdk': 27,
 
       'supportLibrary': '27.0.2',
-      'androidPlugin': '3.0.1',
-      'androidTools': '26.0.1',
-      'kotlin': '1.2.10',
+      'androidPlugin': '3.1.0-beta2',
+      'androidTools': '26.1.0-beta2',
+      'buildTools' : '27.0.1', // Set to older version until this is resolved: https://issuetracker.google.com/issues/73450622
+      'kotlin': '1.2.21',
 
       'release': '8.8.1',
   ]
