--- a/butterknife-integration-test/build.gradle
+++ b/butterknife-integration-test/build.gradle
@@ -14,6 +14,7 @@ android {
     targetSdkVersion versions.compileSdk
     versionCode 1
     versionName '1.0.0'
+    buildToolsVersion versions.buildTools
   }
 
   lintOptions {
