--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-GROUP=com.jakewharton
-VERSION_NAME=10.0.1-SNAPSHOT
+GROUP=com.github.stephanenicolas
+VERSION_NAME=10.0.0-INCAP-SNAPSHOT
 
 POM_DESCRIPTION=Field and method binding for Android views.
 
