--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ include ':butterknife-reflect'
 include ':butterknife-runtime'
 
 //include ':sample:app'
+//include ':sample:base-library'
 //include ':sample:library'
 
 rootProject.name = 'butterknife-parent'
