Closes JakeWharton/butterknife#1300: AndroidX support in butterknife gradle plugin

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ buildscript {
               'runner': 'com.android.support.test:runner:1.0.1',
           ],
       ],
+      'androidx': [
+          'annotations': "androidx.annotation:annotation:1.0.0-rc02",
+      ],
       'lint': [
           'core': "com.android.tools.lint:lint:${versions.androidTools}",
           'api': "com.android.tools.lint:lint-api:${versions.androidTools}",
