Split out the codegen runtime from the reflective lookup
This lets you use the generated code without the reflective runtime (or its ProGuard/R8 rules).

--- a/butterknife-gradle-plugin/src/test/build.gradle
+++ b/butterknife-gradle-plugin/src/test/build.gradle
@@ -51,6 +51,7 @@ android {
 
     sourceSets {
         main.java.srcDirs += '../../../../../butterknife/src/main/java'
+        main.java.srcDirs += '../../../../../butterknife-runtime/src/main/java'
         main.java.srcDirs += '../../../../../butterknife-annotations/src/main/java'
     }
 
