Support AndroidX references in listener declarations
Also backfill an AndroidX test for other codegen

--- a/butterknife-runtime/build.gradle
+++ b/butterknife-runtime/build.gradle
@@ -45,6 +45,7 @@ dependencies {
   testImplementation files(getRuntimeJar())
   testImplementation files(org.gradle.internal.jvm.Jvm.current().getToolsJar())
   testImplementation project(':butterknife-compiler')
+  testImplementation deps.androidx.annotations
 }
 
 def getRuntimeJar() {
