Migrate @OnClick codegen tests to functional tests

--- a/butterknife-integration-test/build.gradle
+++ b/butterknife-integration-test/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 
   codegenImplementation project(':butterknife')
   codegenAnnotationProcessor project(':butterknife-compiler')
+  androidTestCodegenAnnotationProcessor project(':butterknife-compiler')
 
   androidTestImplementation deps.junit
   androidTestImplementation deps.truth
