--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
       'compileSdk': 28,
 
       'supportLibrary': '28.0.0',
-      'androidTools': '26.2.0-rc03',
+      'androidTools': '26.2.0',
       'kotlin': '1.2.70',
 
       'release': '8.8.1',
