Speed up CI builds by using R8

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ org.gradle.jvmargs=-Xmx1536M
 
 # TODO https://issuetracker.google.com/issues/73450622
 android.enableAapt2=false
+
+android.enableR8=true
