Make all artifacts use Java 8 bytecode

--- a/butterknife-runtime/build.gradle
+++ b/butterknife-runtime/build.gradle
@@ -15,6 +15,11 @@ android {
     }
   }
 
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
+
   lintOptions {
     textReport true
     textOutput 'stdout'
