--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.jakewharton
-VERSION_NAME=9.0.0-SNAPSHOT
+VERSION_NAME=9.0.0-rc2
 
 POM_DESCRIPTION=Field and method binding for Android views.
 
