--- a/butterknife/src/main/AndroidManifest.xml
+++ b/butterknife/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="butterknife"/>
+<manifest package="butterknife.core"/>
