--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.github.stephanenicolas
-VERSION_NAME=10.0.0-INCAP-1.SNAPSHOT
+VERSION_NAME=10.0.0-INCAP-1
 
 POM_DESCRIPTION=Field and method binding for Android views.
 
