--- a/butterknife-runtime/build.gradle
+++ b/butterknife-runtime/build.gradle
@@ -6,7 +6,7 @@ android {
   defaultConfig {
     minSdkVersion versions.minSdk
 
-    testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+    testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
     javaCompileOptions {
       annotationProcessorOptions {
