Add @OnPageChange support to reflect backend

--- a/butterknife-reflect/build.gradle
+++ b/butterknife-reflect/build.gradle
@@ -29,6 +29,7 @@ android {
 
 dependencies {
   api project(':butterknife-runtime')
+  api deps.androidx.viewpager
 }
 
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
