--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
       ],
       'androidx': [
           'core': "androidx.core:core:1.0.0",
+          'viewpager': "androidx.viewpager:viewpager:1.0.0",
           'annotations': "androidx.annotation:annotation:1.0.0",
           'test': [
               'runner': 'androidx.test:runner:1.1.0',
