--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ buildscript {
           'tests': "com.android.tools.lint:lint-tests:${versions.androidTools}",
       ],
       javapoet: 'com.squareup:javapoet:1.10.0',
+      kotlinpoet: 'com.squareup:kotlinpoet:1.0.1',
       junit: 'junit:junit:4.12',
       truth: 'com.google.truth:truth:0.42',
       compiletesting: 'com.google.testing.compile:compile-testing:0.15',
